# Transcript-to-jira-slack-automation

./: .env.example  .gitignore  Dockerfile  README.md  WhatsApp Audio 2026-06-16 at 1.30.38 AM.aac  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt  transcribe.py
.github/workflows/: run-meeting-automation.yml
artifacts/latest/: analysis.json  automation_result.json  jira_payloads.json  jira_results.json  run_report.md  slack_payload.json
config/: owners.example.json  settings.example.yaml
data/: sample_meeting_notes.md  transcript.txt  transcript.txt.docx
docs/: peer_walkthrough.md  setup_and_demo_guide.md  submission_writeup_template.md
src/: extract.py  find_account_ids.py  jira_client.py  llm_client.py  pipeline.py  resolve.py  slack_client.py
src/meeting_automation/: __init__.py  cli.py  config.py  extractor.py  jira_client.py  models.py  pipeline.py  reporting.py  slack_client.py  util.py
tests/: test_extractor.py
