[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-meeting-automation"
version = "0.1.0"
description = "Meeting transcript to Jira tickets and Slack summary automation."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
meeting-automation = "meeting_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
